--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,13 @@
                 android:value=".MainActivity" />
         </activity>
         <activity
-            android:name=".SecondActivity"
-            android:parentActivityName=".MainActivity" />
+            android:name=".controller.QuoteCreditSaveVariable"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+
     </application>
 
 </manifest>
