--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "co.japl.android.myapplication"
         minSdk 21
         targetSdk 32
-        versionCode 11
-        versionName ""
+        versionCode 13
+        versionName "Agregada nueva pantalla para cargar cuotas especiales dentro de la pagina de tarjeta de credito, ademas de que se usa en el momento de cargar el pago por ejemplo para tasas especiales que no son compra cartera, avance o la tasa del credito normal."
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
