--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "co.japl.android.myapplication"
         minSdk 21
         targetSdk 33
-        versionCode 16
-        versionName "Actualizada la interfaz grafica a un nuvo diseño"
+        versionCode 17
+        versionName "se realiza ajuste de errores graficos encontrados y errores que hacian cerrar la aplicacion ademas de ajustar el regresar ya que se estaban presentando errores ene este"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
