--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    // Add the Google services Gradle plugin
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -54,9 +56,11 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
     implementation 'com.google.android.gms:play-services-drive:17.0.0'
+    implementation 'com.google.gms.google-services:com.google.gms.google-services.gradle.plugin:4.3.15'
     implementation 'com.squareup.okio:okio:1.14.0'
     implementation 'com.google.apis:google-api-services-script:v1-rev20220323-2.0.0'
     implementation 'com.google.http-client:google-http-client-gson:1.42.3'
+    implementation platform('com.google.firebase:firebase-bom:31.2.3')
 
     //noinspection GradleCompatible
     testImplementation 'junit:junit:4.13.2'
