--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "co.japl.android.myapplication"
         minSdk 21
         targetSdk 33
-        versionCode 18
-        versionName "Se agrega tabla de amortizacion y se cambia lista seleccionables por mensajes emergentes, se adiciona mensaje para validar si desea elimiar los registros "
+        versionCode 19
+        versionName "Ajuste errores encontrados despues del despliegue anterior"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
