--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "co.japl.android.myapplication"
         minSdk 21
         targetSdk 33
-        versionCode 3_03_03_025
-        versionName "Se ajustan errores encontrados en la formulacion de las tasas, en el resumen, se agregan nuevos campos en el resumen y se agregan indicadores rojos en algunos casos"
+        versionCode 3_04_03_026
+        versionName "Se agrega pagina para seleccionar los pagos realizados y se crea otra para ver los periodos que fueron pagados"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
