--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "co.japl.android.myapplication"
         minSdk 21
         targetSdk 33
-        versionCode 4_04_06_030
-        versionName "Enable credit card option to interest quotes"
+        versionCode 4_04_07_031
+        versionName "Added end date to quote creditcard and payment recurrent records, finalice recurrent quote and change value of quote, it aviod loss values in periods"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
