--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "co.japl.android.myapplication"
         minSdk 21
         targetSdk 33
-        versionCode 4_04_09_033
-        versionName "Agregado cuotas diferidas para tc y periodo de gracia para creditos"
+        versionCode 4_04_10_034
+        versionName "Ajuste valores que no estan mostrando en pantalla"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
