--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "co.japl.android.myapplication"
         minSdk 21
         targetSdk 33
-        versionCode 4_04_10_034
-        versionName "Ajuste valores que no estan mostrando en pantalla"
+        versionCode 4_04_11_035
+        versionName "Fix error with dates in quote credit card and update values in background insted focus off"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
