--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'com.google.gms.google-services:com.google.gms.google-services.gradle.plugin:4.3.15'
     implementation 'com.squareup.okio:okio:1.14.0'
     implementation 'com.google.apis:google-api-services-script:v1-rev20220323-2.0.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'com.google.http-client:google-http-client-gson:1.42.3'
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
     implementation 'androidx.loader:loader:1.1.0'
