--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     // Add the Google services Gradle plugin
     id 'com.google.gms.google-services'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -63,6 +65,8 @@ dependencies {
     implementation 'com.google.http-client:google-http-client-gson:1.42.3'
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
     implementation 'androidx.loader:loader:1.1.0'
+    implementation 'com.google.dagger:hilt-android:2.44'
+    kapt 'com.google.dagger:hilt-android-compiler:2.44'
 
     //noinspection GradleCompatible
     testImplementation 'junit:junit:4.13.2'
