--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28"/>
     <application
          android:requestLegacyExternalStorage="true"
+        android:name=".finanzas.ApplicationInitial"
         android:allowBackup="true"
         android:icon="@mipmap/ic_finanzas"
         android:label="@string/app_name"
