--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "co.japl.android.myapplication"
         minSdk 21
         targetSdk 33
-        versionCode 4_05_03_040
-        versionName "Ajuste errores en pantalla de ingreso de creditos con la visualizacion de los campos, ademas se realiza ajuste del grafico para que se adapte un poco a la pantallas, agregago el grafico a creditos, arreglo error en pagos."
+        versionCode 4_05_03_041
+        versionName "Ajuste error en carga de aplicacion, ademas de agregar graph a pagos y ahora se puede seleccionar el pago en el grafico y obtener informacion"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
