--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,4 @@ include ':japl-android-graphs'
 include ':ui'
 include ':about-module'
 include ':japl-finances-iports'
+include ':CreditCardModule'
