feature sms gcp connect
added processing sms to credit card module and logic to read sms from a specific phone number and it need to add a patter to check if the message it is right and get value necessaries

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "co.japl.android.myapplication"
         minSdk 26
         targetSdk 33
-        versionCode 4_05_05_076
-        versionName "V 4.05.04.075 Added Simulator bought credit card"
+        versionCode 4_05_05_081
+        versionName "V 4.05.04.081 Added read SMS with pattern code to get Name Item, value Item and date item"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
