feature Migration Paids
Starting migration layout to composable UI and new architecture way and some exaples to connect to google drive (test mode)

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,4 @@ include ':ui'
 include ':about-module'
 include ':japl-finances-iports'
 include ':CreditCardModule'
+include ':japl-android-finances-paid-module'
