--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,29 +5,44 @@ plugins {
     id 'com.google.gms.google-services'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
+    signingConfigs {
+        prod {
+            storeFile file('/home/alejo/finanzas-same-plus-dot.pks')
+            storePassword 'Nano871022.'
+            keyAlias 'alejo871022'
+            keyPassword 'Nano871022.'
+        }
+    }
     compileSdk 34
 
     defaultConfig {
         applicationId "co.japl.android.myapplication"
         minSdk 26
         targetSdk 33
-        versionCode 4_05_05_088
-        versionName "V 4.05.05.088 Migration Payment to new interface and added sms services loader"
+        versionCode 4_05_06_098
+        versionName "V 4.05.06.098 Fix Issues interface"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.prod
     }
 
     buildTypes {
+
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.prod
             buildConfigField ("String",'GoogleClientId', prodGoogleClientId)
         }
+
         debug{
             applicationIdSuffix ".debug"
+            minifyEnabled true
+          //  proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             buildConfigField ("String",'GoogleClientId', debugGoogleClientId)
         }
     }
@@ -100,12 +115,14 @@ dependencies {
         exclude group: 'org.apache.httpcomponents'
     }
     implementation 'com.google.http-client:google-http-client-gson:1.42.3'
-    implementation platform('com.google.firebase:firebase-bom:32.7.4')
+    implementation platform('com.google.firebase:firebase-bom:32.8.0')
     implementation 'com.google.firebase:firebase-auth:22.3.1'
     //implementation 'com.google.android.play:core:1.10.3'
     implementation('com.google.android.play:integrity:1.3.0')
     implementation('com.google.android.libraries.identity.googleid:googleid:1.1.0')
     implementation 'com.google.dagger:hilt-android:2.46.1'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
     implementation 'com.squareup.okio:okio:3.4.0'
     kapt 'com.google.dagger:hilt-android-compiler:2.48.1'
