--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.CREDENTIAL_MANAGER_QUERY_CANDIDATE_CREDENTIALS" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28"/>
     <uses-feature android:name="android.hardware.telephony" android:required="false"/>
     <uses-permission android:name="android.permission.READ_SMS"/>
     <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID"
+        xmlns:tools="http://schemas.android.com/tools" tools:node="remove"/>
 
     <application
          android:requestLegacyExternalStorage="true"
@@ -17,7 +20,9 @@
         android:roundIcon="@mipmap/ic_finanzas_bg_foreground"
         android:supportsRtl="true"
         android:theme="@style/Theme.finances">
+        <!--
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
+        -->
         <provider
             android:authorities="${applicationId}.provider"
             android:name="androidx.core.content.FileProvider"
