--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ android {
         applicationId "co.japl.android.myapplication"
         minSdk 26
         targetSdk 33
-        versionCode 4_05_07_101
-        versionName "V 4.05.07.101 Fix Issues interface"
+        versionCode 4_05_09_104
+        versionName "V 4.05.09 build 104 31 day of month without 31 days and differ to back"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.prod
