feature migration paid
upadte code with paid module migrate

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -17,8 +17,9 @@ include ':app'
 include ':japl-android-finances-core'
 include ':japl-android-finances-services'
 include ':japl-android-graphs'
-include ':ui'
+include ':UI'
 include ':about-module'
 include ':japl-finances-iports'
 include ':CreditCardModule'
 include ':japl-android-finances-paid-module'
+include ':credit'
