--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,9 @@ android {
     defaultConfig {
         applicationId "co.japl.android.myapplication"
         minSdk 26
-        targetSdk 33
-        versionCode 4_05_10_107
-        versionName "V 4.05.10 build 107 31 day of month without 31 days and differ to back"
+        targetSdk 34
+        versionCode 4_05_11_109
+        versionName "V 4.05.11 build 109 Show differt records on the right side of list"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.prod
@@ -82,32 +82,32 @@ dependencies {
     implementation(project(':japl-android-finances-core'))
     implementation(project(':japl-android-finances-services'))
     implementation(project(':japl-android-graphs'))
-    implementation(project(':ui'))
+    implementation(project(':UI'))
     implementation(project(':about-module'))
     implementation(project(":japl-finances-iports"))
     implementation(project(":CreditCardModule"))
     implementation(project(":japl-android-finances-paid-module"))
 
 
-    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.core:core-ktx:1.13.1'
     implementation 'androidx.core:core-splashscreen:1.0.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation('androidx.credentials:credentials:1.2.2')
     implementation('androidx.credentials:credentials-play-services-auth:1.2.2')
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.6'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.6'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.8.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.loader:loader:1.1.0'
     implementation 'com.google.api-client:google-api-client:2.0.0'
 
-    implementation 'com.google.android.material:material:1.11.0'
-    implementation 'com.google.android.gms:play-services-auth:21.0.0'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'com.google.android.gms:play-services-auth:21.2.0'
     implementation 'com.google.android.gms:play-services-drive:17.0.0'
     implementation 'com.google.http-client:google-http-client-gson:1.42.3'
-    implementation 'com.google.gms.google-services:com.google.gms.google-services.gradle.plugin:4.4.1'
+    implementation 'com.google.gms.google-services:com.google.gms.google-services.gradle.plugin:4.4.2'
     //implementation 'com.google.apis:google-api-services-script:v1-rev20220323-2.0.0'
     implementation('com.google.api-client:google-api-client-android:1.23.0') {
         exclude group: 'org.apache.httpcomponents'
@@ -116,11 +116,11 @@ dependencies {
         exclude group: 'org.apache.httpcomponents'
     }
     implementation 'com.google.http-client:google-http-client-gson:1.42.3'
-    implementation platform('com.google.firebase:firebase-bom:32.8.0')
-    implementation 'com.google.firebase:firebase-auth:22.3.1'
+    implementation platform('com.google.firebase:firebase-bom:33.4.0')
+    implementation 'com.google.firebase:firebase-auth:23.0.0'
     //implementation 'com.google.android.play:core:1.10.3'
-    implementation('com.google.android.play:integrity:1.3.0')
-    implementation('com.google.android.libraries.identity.googleid:googleid:1.1.0')
+    implementation('com.google.android.play:integrity:1.4.0')
+    implementation('com.google.android.libraries.identity.googleid:googleid:1.1.1')
     implementation 'com.google.dagger:hilt-android:2.46.1'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
@@ -129,24 +129,24 @@ dependencies {
     kapt 'com.google.dagger:hilt-android-compiler:2.48.1'
 
 
-    implementation("androidx.compose.material:material-icons-extended:1.5.4")
-    implementation("androidx.compose.material:material-icons-core:1.5.4")
-    implementation("androidx.compose.material3:material3-window-size-class:1.1.2")
-    implementation("androidx.activity:activity-compose:1.8.1")
+    implementation("androidx.compose.material:material-icons-extended:1.7.2")
+    implementation("androidx.compose.material:material-icons-core:1.7.2")
+    implementation("androidx.compose.material3:material3-window-size-class:1.3.0")
+    implementation("androidx.activity:activity-compose:1.9.2")
     implementation("androidx.compose.material3:material3")
-    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2")
-    implementation("androidx.compose.runtime:runtime-livedata:1.5.4")
-    implementation("androidx.compose.runtime:runtime-rxjava2:1.5.4")
-    implementation("androidx.compose.ui:ui-tooling:1.5.4")
-    implementation("androidx.compose.ui:ui-tooling-preview:1.5.4")
-    implementation("androidx.compose.ui:ui:1.5.4")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.8.6")
+    implementation("androidx.compose.runtime:runtime-livedata:1.7.2")
+    implementation("androidx.compose.runtime:runtime-rxjava2:1.7.2")
+    implementation("androidx.compose.ui:ui-tooling:1.7.2")
+    implementation("androidx.compose.ui:ui-tooling-preview:1.7.2")
+    implementation("androidx.compose.ui:ui:1.7.2")
     implementation("androidx.compose.ui:ui-graphics")
-    implementation("androidx.compose.material:material:1.5.4")
+    implementation("androidx.compose.material:material:1.7.2")
 
 
     testImplementation("junit:junit:4.13.2")
-    androidTestImplementation("androidx.test.ext:junit:1.1.5")
-    androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
+    androidTestImplementation("androidx.test.ext:junit:1.2.1")
+    androidTestImplementation("androidx.test.espresso:espresso-core:3.6.1")
     androidTestImplementation(platform("androidx.compose:compose-bom:2023.03.00"))
     androidTestImplementation("androidx.compose.ui:ui-test-junit4")
     debugImplementation("androidx.compose.ui:ui-tooling")
