feature migration paid
upadte code with paid module migrate

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,7 @@ dependencies {
     implementation(project(":japl-finances-iports"))
     implementation(project(":CreditCardModule"))
     implementation(project(":japl-android-finances-paid-module"))
+    implementation(project(":credit"))
 
 
     implementation 'androidx.core:core-ktx:1.13.1' //this manage version of android this version es 14 version 1.15.0 manage android 15
