feature migration list credit
migrated credit list to modules, and fix issues with list bought credit card duplicate some periods and current month, and add new button go to credit tax when there are not added for current month, and backup issu that not allow upload db

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
         applicationId "co.japl.android.myapplication"
         minSdk 26
         targetSdk 34
-        versionCode 4_05_14_121
-        versionName "V 4.05.14 build 121 recap about records saved in all tables"
+        versionCode 4_05_15_122
+        versionName "V 4.05.15 build 122 Migration Credit List and fix duplicate pending quotes in current month"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.prod
