--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
         applicationId "co.japl.android.myapplication"
         minSdk 26
         targetSdk 34
-        versionCode 4_05_15_122
-        versionName "V 4.05.15 build 122 Migration Credit List and fix duplicate pending quotes in current month"
+        versionCode 4_05_16_123
+        versionName "V 4.05.16 build 123 Fix issue in credit card bought when it has differed quotes, when the bought was previous month"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.prod
