--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
         applicationId "co.japl.android.myapplication"
         minSdk 26
         targetSdk 34
-        versionCode 4_05_18_125
-        versionName "V 4.05.18 build 125 Fix issue with dateUtils"
+        versionCode 4_05_19_126
+        versionName "V 4.05.19 build 126 Fix issue datetime and additional values in credits missing"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.prod
