--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
         applicationId "co.japl.android.myapplication"
         minSdk 26
         targetSdk 34
-        versionCode 4_05_21_128
-        versionName "V 4.05.21 build 128 Fixed issues with differ installment payment, now it show in correct month, and fixed issue with db connection was not closed"
+        versionCode 4_05_22_130
+        versionName "V 4.05.22 build 130 Migrated form create credit record and fix issue with values numerics with format decimals"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.prod
@@ -43,8 +43,8 @@ android {
         }
 
         debug{
-            shrinkResources true
-            minifyEnabled true
+            shrinkResources false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField ("String",'GoogleClientId', debugGoogleClientId)
         }
