--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
         applicationId "co.japl.android.myapplication"
         minSdk 26
         targetSdk 34
-        versionCode 4_05_23_131
-        versionName "V 4.05.23 build 131 Fix issues with ui with numbers in text fild in old forms"
+        versionCode 4_05_24_132
+        versionName "V 4.05.24 build 132 Migrate visual all years of credits"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.prod
