--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,12 +19,11 @@ android {
             keyPassword 'Nano871022.'
         }
     }
-    compileSdk 35
+    compileSdk 36
 
     defaultConfig {
         applicationId "co.japl.android.myapplication"
         minSdk 26
-        targetSdk 34
         versionCode 4_05_25_133
         versionName "V 4.05.25 build 135 Migration Projection view and additional credit"
 
@@ -52,18 +51,16 @@ android {
 
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
     }
-    kotlinOptions {
-        jvmTarget = '17'
-    }
+
     buildFeatures {
         viewBinding true
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.4.3"
+        kotlinCompilerExtensionVersion = "1.5.13"
     }
     buildFeatures {
         compose = true
@@ -96,12 +93,12 @@ dependencies {
     implementation(project(":credit"))
 
 
-    implementation 'androidx.core:core-ktx:1.13.1' //this manage version of android this version es 14 version 1.15.0 manage android 15
+    implementation 'androidx.core:core-ktx:1.13.1'
     implementation 'androidx.core:core-splashscreen:1.0.1'
     implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
-    implementation('androidx.credentials:credentials:1.3.0')
-    implementation('androidx.credentials:credentials-play-services-auth:1.3.0')
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation('androidx.credentials:credentials:1.5.0')
+    implementation('androidx.credentials:credentials-play-services-auth:1.5.0')
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.7'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.8.3'
@@ -109,12 +106,13 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.loader:loader:1.1.0'
     implementation 'com.google.api-client:google-api-client:2.2.0'
+    implementation 'androidx.compose.foundation:foundation:1.8.3'
 
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'com.google.android.gms:play-services-auth:21.2.0'
     implementation 'com.google.android.gms:play-services-drive:17.0.0'
     implementation 'com.google.http-client:google-http-client-gson:1.42.3'
-    implementation 'com.google.gms.google-services:com.google.gms.google-services.gradle.plugin:4.4.2'
+    implementation 'com.google.gms.google-services:com.google.gms.google-services.gradle.plugin:4.4.3'
     //implementation 'com.google.apis:google-api-services-script:v1-rev20220323-2.0.0'
     implementation('com.google.api-client:google-api-client-android:1.23.0') {
         exclude group: 'org.apache.httpcomponents'
@@ -123,39 +121,40 @@ dependencies {
         exclude group: 'org.apache.httpcomponents'
     }
     implementation 'com.google.http-client:google-http-client-gson:1.42.3'
-    implementation platform('com.google.firebase:firebase-bom:33.5.1')
-    implementation 'com.google.firebase:firebase-auth:23.1.0'
+    implementation platform('com.google.firebase:firebase-bom:33.1.0')
+    implementation 'com.google.firebase:firebase-auth'
     //implementation 'com.google.android.play:core:1.10.3'
-    implementation('com.google.android.play:integrity:1.4.0')
+    implementation('com.google.android.play:integrity:1.3.0')
     implementation('com.google.android.libraries.identity.googleid:googleid:1.1.1')
-    implementation 'com.google.dagger:hilt-android:2.52'
+    implementation 'com.google.dagger:hilt-android:2.56.2'
     implementation 'com.google.dagger:dagger-producers:2.52'
-    kapt 'com.google.dagger:hilt-compiler:2.52'
+    kapt 'com.google.dagger:hilt-compiler:2.56.2'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
     implementation 'com.squareup.okio:okio:3.6.0'
 
 
-    implementation("androidx.compose.material:material-icons-extended:1.7.5")
-    implementation("androidx.compose.material:material-icons-core:1.7.5")
-    implementation("androidx.compose.material3:material3-window-size-class:1.3.1")
-    implementation("androidx.activity:activity-compose:1.9.3")
+    implementation platform('androidx.compose:compose-bom:2025.06.01')
+    implementation("androidx.compose.material:material-icons-extended")
+    implementation("androidx.compose.material:material-icons-core")
+    implementation("androidx.compose.material3:material3-window-size-class")
+    implementation("androidx.activity:activity-compose")
     implementation("androidx.compose.material3:material3")
-    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.8.7")
-    implementation("androidx.compose.runtime:runtime-livedata:1.7.5")
-    implementation("androidx.compose.runtime:runtime-rxjava2:1.7.5")
-    implementation("androidx.compose.ui:ui-tooling:1.7.5")
-    implementation("androidx.compose.ui:ui-tooling-preview:1.7.5")
-    implementation("androidx.compose.ui:ui:1.7.5")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-compose")
+    implementation("androidx.compose.runtime:runtime-livedata")
+    implementation("androidx.compose.runtime:runtime-rxjava2")
+    implementation("androidx.compose.ui:ui-tooling")
+    implementation("androidx.compose.ui:ui-tooling-preview")
+    implementation("androidx.compose.ui:ui")
     implementation("androidx.compose.ui:ui-graphics")
-    implementation("androidx.compose.material:material:1.7.5")
+    implementation("androidx.compose.material:material")
 
 
     testImplementation("junit:junit:4.13.2")
     androidTestImplementation("androidx.test.ext:junit:1.2.1")
     androidTestImplementation("androidx.test.espresso:espresso-core:3.6.1")
-    androidTestImplementation(platform("androidx.compose:compose-bom:2024.10.01"))
+    androidTestImplementation(platform("androidx.compose:compose-bom:2025.06.01"))
     androidTestImplementation("androidx.compose.ui:ui-test-junit4")
     debugImplementation("androidx.compose.ui:ui-tooling")
     debugImplementation("androidx.compose.ui:ui-test-manifest")
