--- a/build.gradle
+++ b/build.gradle
@@ -10,22 +10,22 @@ buildscript {
         // Add the dependency for the Google services Gradle plugin
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:2.0.0'
         classpath 'com.google.gms:google-services:4.4.2'
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.52'
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.56.2'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:3.0.2'
     }
 }
 
 
 plugins {
-    id 'com.android.application' version '8.9.2' apply false
-    id 'com.android.library' version '8.9.2' apply false
-    id 'org.jetbrains.kotlin.android' version '2.0.21' apply false
-    id 'com.google.dagger.hilt.android' version '2.52' apply false
-    id 'com.google.gms.google-services' version '4.4.2' apply false
+    id 'com.android.application' version '8.11.0' apply false
+    id 'com.android.library' version '8.11.0' apply false
+    id 'org.jetbrains.kotlin.android' version '2.0.0' apply false
+    id 'com.google.dagger.hilt.android' version '2.56.2' apply false
+    id 'com.google.gms.google-services' version '4.4.3' apply false
     id 'org.jetbrains.kotlin.plugin.compose' version '2.0.0'
 
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+tasks.register('clean', Delete) {
+    delete rootProject.layout.buildDirectory
 }
