--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,9 @@ kotlin.code.style=official
 # Enables namespacing of each library's R class so that its R class includes only the
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
+org.gradle.configuration-cache=true
+org.gradle.parallel=true
+org.gadle.jvmargs=-Xmx8g -Dorg.gradle.daemon.jvm.options="-Xmx8g" 
 android.nonTransitiveRClass=true
 android.nonFinalResIds=true
 org.gradle.unsafe.configuration-cache=true
