--- a/.github/workflows/merge-deploy.yml
+++ b/.github/workflows/merge-deploy.yml
@@ -9,6 +9,13 @@ on:
   workflow_dispatch:
 
 jobs:
+
+  checkout:
+    runs-on: ubuntu-latest
+    steps:
+     - uses: actions/checkout@v4
+    
+  
   lint:
     uses: ./.github/workflows/lint.yml
 
