--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,9 @@ jobs:
     name: Deploy to Play Store
     runs-on: ubuntu-latest
     steps:
+
+      - uses: actions/checkout@v4
+    
       - name: Checkout main repository
         uses: actions/checkout@v4
         with:
