--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,6 +7,9 @@ jobs:
     name: Lint Code
     runs-on: ubuntu-latest
     steps:
+
+      - uses: actions/checkout@v4
+      
       - name: Setup Environment
         uses: ./.github/actions/setup
 
