--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,7 +59,7 @@ jobs:
             --no-daemon \
             --no-parallel \
             --info \
-            -Pandroid.injected.signing.store.file="../properties/finanzas/finanzas-same-plus-dot-v2.pks" \
+            -Pandroid.injected.signing.store.file="$REPO_ROOT/properties/finanzas/finanzas-same-plus-dot-v2.pks" \
             -Pandroid.injected.signing.store.password=${{ secrets.SIGNING_STORE_PASSWORD }} \
             -Pandroid.injected.signing.key.alias=${{ secrets.SIGNING_KEY_ALIAS }} \
             -Pandroid.injected.signing.key.password=${{ secrets.SIGNING_KEY_PASSWORD }}
