--- a/.github/workflows/merge-deploy.yml
+++ b/.github/workflows/merge-deploy.yml
@@ -39,3 +39,11 @@ jobs:
       VersionCode: ${{ needs.build.outputs.VersionCode }}
       VersionName: ${{ needs.build.outputs.VersionName }}
       CleanVersion: ${{ needs.build.outputs.CleanVersion }}
+
+  createtag:
+    needs: [deploy]
+    uses: ./.github/workflows/createtag.yml
+    with:
+      VersionCode: ${{ needs.build.outputs.VersionCode }}
+      VersionName: ${{ needs.build.outputs.VersionName }}
+      CleanVersion: ${{ needs.build.outputs.CleanVersion }}
