--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,3 +51,4 @@ jobs:
           track: internal
           inAppUpdatePriority: 0
           status: completed
+          changesNotSentForReview: true
